Correcting responsiveness of the home screen and creating modal for use on mobile

--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -16,3 +16,26 @@
   gap: 6.25rem;
   align-content: center;
 }
+
+@media (max-width: 1080px) {
+}
+
+@media (max-width: 960px) {
+  .container section {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin: 7.5rem 0rem;
+  }
+  .container section :first div {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+  }
+  .challengeBox {
+    display: none;
+  }
+}
+
+@media (max-width: 720px) {
+}
